--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "cSpell.words": ["citacao", "Citacao", "classtest", "saida"]
+    "cSpell.words": [
+        "citacao",
+        "Citacao",
+        "classtest",
+        "comparacao",
+        "Irmao",
+        "saida"
+    ]
 }
