--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "tarefa-strings",
+    "name": "tarefa-operadores",
     "version": "1.0.0",
     "main": "src/main.ts",
     "type": "module",
